# MinhashSketch

./: .gitignore  CMakeLists.txt  Minhash.cpp  Minhash.h  README.md  SpookyV2.cpp  SpookyV2.h  Utils.cpp  Utils.h  main.cpp
GPU_src/: Hash.cu  Hash.h  README  RadixGPU.cu  Utils.h  main.cu
src/: Hash.cpp  Hash.h  Help.cpp  Help.h  MinhashSketch.cu  README  README.md  Radix.cpp  Radix.h  RadixGPU.cu  RadixGPU.old.cu  SpookyV2_d.cu  SpookyV2_d.h  Utils.cpp  Utils.h  main.cpp  main.cu
testing_files/: sequence_abstract1.fasta  sequence_abstract2.fasta  sequence_clip1.fasta  sequence_clip3.fasta
